Creation of Controller and views for admin dashboard. Start to add ability to remove feeds and/or posts.

--- a/SportBoard.Web/Views/Shared/_Layout.cshtml
+++ b/SportBoard.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,10 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Discover Feeds", "Index", "Feeds")</li>
                     <li>@Html.ActionLink("Create Feed", "Create", "Feed")</li>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li>@Html.ActionLink("Manage","Index", "Admin")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
