Custom authorization for admin roles over support roles. Access denied screen for unauthorized users.

--- a/SportBoard.Web/Views/Admin/Index.cshtml
+++ b/SportBoard.Web/Views/Admin/Index.cshtml
@@ -6,6 +6,6 @@
 <h2>Index</h2>
 
 <div class="row">
-    @Html.ActionLink("Add Roles", "Roles", "Admin");
+    @Html.ActionLink("Add Roles", "Roles", "Admin")
 </div>
 
