Feature to allow admins and creators to delete a post. All related comments/photos will be deteled. Need to decide if they should be removed from file system.

--- a/SportBoard.Web/Views/Post/Details.cshtml
+++ b/SportBoard.Web/Views/Post/Details.cshtml
@@ -15,6 +15,14 @@
         </div>
     </div>
 </div>
+@if(User.IsInRole("Admin") || Model.Post.UserId == Model.CommentsCurrentUserVM.CurrentUser.Id)
+{
+    <div class="row">
+        <div class="col-md-12">
+                <a class="deletePost" href="@Url.Action("Delete","Post", new { id = Model.Post.PostId })"><i class="fas fa-trash-alt"></i></a>
+        </div>
+    </div>
+}
 
 <form id="form">
     <div class="row">
