--- a/SportBoard.Web/Views/Feed/Index.cshtml
+++ b/SportBoard.Web/Views/Feed/Index.cshtml
@@ -1,12 +1,6 @@
 ﻿@model SportBoard.Web.Models.ViewModels.FeedFilterSortOptionsVM
 @{
-    ViewBag.Title = "Home Page";
-    ViewBag.DailySortParm = "daily";
-    ViewBag.WeeklySortParm = "weekly";
-    ViewBag.MonthlySortParm = "monthly";
-    ViewBag.HotSortParm = "hot";
-    ViewBag.NewSortParm = "new";
-    ViewBag.BestSortParm = "best";
+    ViewBag.Title = "Index";
 }
 
 <div class="jumbotron">
@@ -14,11 +8,14 @@
     <p class="lead">SportBoard allows users with similar interests to post related photos and discuss, like and dislike these photos.</p>
 </div>
 <div class="col-md-12">
+@*@if (Model.SortOptions == SportBoard.Web.BLL.SortOptions.Best)
+{
     <ul class="nav nav-tabs">
         <li role="presentation" class="today active"><a href="#">Today</a></li>
         <li role="presentation" class="lastWeek"><a href="#">Last Week</a></li>
         <li role="presentation" class="lastMonth"><a href="#">Last Month</a></li>
     </ul>
+}*@
     <div class="dropdown">
         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             <span id="selected">Sort</span>
@@ -85,7 +82,7 @@
             todaySort.addClass('active');
 
             $.ajax({
-                url: '@Url.Action("FilterFeeds", "Feed", new { filterNum = 0 })',
+                url: '@Url.Action("SortFilterFeeds", "Feed", new { filterNum = 0 , sortNum = 1})',
                 type: "GET",
                 dataType: "html",
                 success: function (data) {
@@ -102,7 +99,7 @@
             updateFilterOption(1);
 
             $.ajax({
-                url: '@Url.Action("FilterFeeds", "Feed", new { filterNum = 1 })',
+                url: '@Url.Action("SortFilterFeeds", "Feed", new { filterNum = 1 , sortNum = 1})',
                 type: "GET",
                 dataType: "html",
                 success: function (data) {
@@ -118,7 +115,7 @@
             updateFilterOption(2);
 
             $.ajax({
-                url: '@Url.Action("FilterFeeds", "Feed", new { filterNum = 2 })',
+                url: '@Url.Action("SortFilterFeeds", "Feed", new { filterNum = 2 , sortNum = 1})',
                 type: "GET",
                 dataType: "html",
                 success: function (data) {
@@ -137,7 +134,7 @@
         $('.hot').click(function () {
 
             $.ajax({
-                url: '@Url.Action("SortFeeds", "Feed", new {sortOrder = ViewBag.HotSortParm, feeds = Model })',
+                url: '@Url.Action("SortFeeds", "Feed", new {sortNum = 2})',
                 type: "GET",
                 dataType: "html",
                 success: function (data) {
@@ -149,7 +146,7 @@
         $('.new').click(function () {
 
             $.ajax({
-                url: '@Url.Action("SortFeeds", "Feed", new {sortOrder = ViewBag.NewSortParm, feeds = Model })',
+                url: '@Url.Action("SortFeeds", "Feed", new {sortNum = 0})',
                 type: "GET",
                 dataType: "html",
                 success: function (data) {
@@ -161,7 +158,7 @@
         $('.best').click(function () {
 
             $.ajax({
-                url: '@Url.Action("SortFeeds", "Feed", new {sortOrder = ViewBag.BestSortParm, feeds = Model })',
+                url: '@Url.Action("SortFilterFeeds", "Feed", new {filterNum = 1, sortNum = 1 })',
                 type: "GET",
                 dataType: "html",
                 success: function (data) {
