--- a/SportBoard.Web/Views/Manage/Index.cshtml
+++ b/SportBoard.Web/Views/Manage/Index.cshtml
@@ -30,13 +30,13 @@
         </dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
+
              See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
                 for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
+
              Uncomment the following block after you have set up two-factor authentication
         *@
-        @*  
+        @*
             <dt>Phone Number:</dt>
             <dd>
                 @(Model.PhoneNumber ?? "None")
@@ -83,5 +83,33 @@
                     }
                 }*@
         </dd>
+        <dt>Sort Options</dt>
+        <dd>
+            What would you like your default sort option to be?
+
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <span id="selected">Sort</span>
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li class="hot"><a href="#"><i class="fas fa-fire"></i>Hot</a></li>
+                    <li class="new"><a href="#"><i class="fab fa-earlybirds"></i>New</a></li>
+                    <li class="best"><a href="#"><i class="fas fa-certificate"></i>Best</a></li>
+                </ul>
+            </div>
+        </dd>
     </dl>
 </div>
+
+@section Scripts{
+<script>
+    $('.dropdown-menu a').click(function () {
+        var logo = $(this).find('i')[0];
+        console.log(logo);
+
+        $('#selected').text($(this).text());
+    });
+</script>
+
+}
