--- a/SportBoard.Web/Views/Feed/Index.cshtml
+++ b/SportBoard.Web/Views/Feed/Index.cshtml
@@ -53,8 +53,9 @@
             width: 100%;
         }
 
-        .card img {
+        .card a img {
             width: 100%;
+            height: 50%;
         }
 
         .container h4 {
