--- a/SportBoard.Web/Views/Admin/Requests.cshtml
+++ b/SportBoard.Web/Views/Admin/Requests.cshtml
@@ -30,7 +30,7 @@
         {
         <tr>
             <td>@request.RequestId</td>
-            <td>@request.UserId</td>
+            <td>@request.AspNetUsers.UserName</td>
             <td><a href="@Url.Action("Details", "Feed", new { id = request.FeedId })">@request.Feed.FeedName</a></td>
             <td>@request.ReasonForDeletion</td>
             <td><a href="@Url.Action("Delete", "Feed", new { feedId = request.FeedId, requestId = request.RequestId })">Yes</a> | <a href="@Url.Action("CloseRequest", "Admin", new { id = request.RequestId })">No</a></td>
