--- a/SportBoard.Web/Views/Feed/Create.cshtml
+++ b/SportBoard.Web/Views/Feed/Create.cshtml
@@ -3,43 +3,51 @@
     ViewBag.Title = "Create";
 }
 
+<style>
+    h2 {
+        text-align: center;
+    }
+</style>
+<div class="feed-create-div">
+    <h2>Create Feed</h2>
 
-<h2>Create Feed</h2>
-
-@*@using (Html.BeginForm("Upload", "Feed", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-        <div class="feedText">
-            <p>To create a feed, enter a name and a index photo. Optionally you can give the feed a description.</p>
-        </div>
-        @*<div class="input-group">
-                <input type="text" class="form-control" placeholder="Feed Name" aria-describedby="basic-addon1" name="feedName">
+    @*@using (Html.BeginForm("Upload", "Feed", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <div class="feedText">
+                <p>To create a feed, enter a name and a index photo. Optionally you can give the feed a description.</p>
             </div>
-
-            <div class="fileinput fileinput-new" data-provides="fileinput">
-                <div class="fileinput-preview thumbnail" data-trigger="fileinput" style="width: 200px; height: 150px;"></div>
-                <div>
-                    <span class="btn btn-default btn-file"><span class="fileinput-new">Select image</span><span class="fileinput-exists">Change</span><input type="file" name="..."></span>
-                    <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
+            @*<div class="input-group">
+                    <input type="text" class="form-control" placeholder="Feed Name" aria-describedby="basic-addon1" name="feedName">
                 </div>
-            </div>*@
-<form id="form">
-    <div class="input-group">
-        <div class="col-md-12">
-            <input type="text" id="feedName" class="form-control" placeholder="Feed Name" aria-describedby="basic-addon1" name="feedName" required>
+
+                <div class="fileinput fileinput-new" data-provides="fileinput">
+                    <div class="fileinput-preview thumbnail" data-trigger="fileinput" style="width: 200px; height: 150px;"></div>
+                    <div>
+                        <span class="btn btn-default btn-file"><span class="fileinput-new">Select image</span><span class="fileinput-exists">Change</span><input type="file" name="..."></span>
+                        <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
+                    </div>
+                </div>*@
+
+
+    <form id="form feed-form">
+        <div class="input-group" style="margin-bottom: 5px; width: 100%;">
+            <div class="col-md-12">
+                <input type="text" id="feedName" class="form-control" placeholder="Feed Name" aria-describedby="basic-addon1" name="feedName" required>
+            </div>
         </div>
-    </div>
-    <div class="input-group">
-        <div class="col-md-10">
-            <input type="file" id="imageUploadForm" name="image" accept="image/*" required />
+        <div class="input-group" style="margin-bottom: 5px; width: 100%;">
+            <div class="col-md-10">
+                <input type="file" id="imageUploadForm" name="image" accept="image/*" required />
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-10">
-            <input type="submit" value="Create Feed" class="btn btn-success" id="submit" />
+        <div class="form-group">
+            <div class="col-md-10">
+                <input type="submit" value="Create Feed" class="btn btn-success" id="submit" />
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
 
 @section scripts{
     <script>
