--- a/SportBoard.Web/Views/Shared/_Layout.cshtml
+++ b/SportBoard.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" style="display: flex; flex-direction: column; align-items: center; margin-top: 20px;">
         @RenderBody()
         <hr />
         <footer>
