--- a/SportBoard.Web/Content/Site.css
+++ b/SportBoard.Web/Content/Site.css
@@ -54,3 +54,9 @@ h6,
     align-items: flex-start;
     width: 50%;
 }
+
+.loginForm-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
