--- a/SportBoard.Web/Views/Account/Login.cshtml
+++ b/SportBoard.Web/Views/Account/Login.cshtml
@@ -17,31 +17,34 @@
 </style>
 
 <h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-6">
-        <section id="loginForm">
+<div class="row" style="display: flex; justify-content: center;">
+    <div class="loginForm-div" style="width: 30%; background-color: rgba(202, 194, 194,0.95); border-radius: 7px;">
+        <section id="loginForm" style="width: 300px;">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group loginForm">
-                    @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                    @*@Html.LabelFor(m => m.UserName, new { @class = "control-label" })*@
+                    <div class="">
+                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control",
+                                                                @placeholder = "Username",
+                                                                @Autocomplete = "off"})
                         @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group loginForm">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    @*@Html.LabelFor(m => m.Password, new { @class = "control-label" })*@
+                    <div class="">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control",
+                                                                 @placeholder = "Password",
+                                                                 @Autocomplete= "off"})   
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group loginForm">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="">
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
@@ -49,7 +52,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="">
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
@@ -66,7 +69,6 @@
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>
-    <div class="col-md-3"></div>
 </div>
 
 
