Add UserHistory class to pull historical data for given user id.

--- a/SportBoard.Web/Views/Manage/UserHistory.cshtml
+++ b/SportBoard.Web/Views/Manage/UserHistory.cshtml
@@ -1,7 +1,7 @@
-﻿
+﻿@model SportBoard.Web.Models.HistoricalModels.UserHistory
 @{
     ViewBag.Title = "UserHistory";
 }
 
-<h2>UserHistory</h2>
+<h2>User History for @Model.User.UserName</h2>
 
