Start implementing filtering of user history - needs looked at

--- a/SportBoard.Web/Views/Manage/UserHistory.cshtml
+++ b/SportBoard.Web/Views/Manage/UserHistory.cshtml
@@ -8,11 +8,11 @@
 <div class="col-md-12">
     <div id="filterOptions">
         <ul class="nav nav-tabs">
-            <li role="presentation" class="feeds active"><a href="#">Feeds</a></li>
+            <li role="presentation" class="feeds"><a href="#">Feeds</a></li>
             <li role="presentation" class="Posts"><a href="#">Posts</a></li>
             <li role="presentation" class="comments"><a href="#">Comments</a></li>
             <li role="presentation" class="deletionRequests"><a href="#">Deletion Requests</a></li>
-            <li role="presentation" class="all"><a href="#">All History</a></li>
+            <li role="presentation" class="all active"><a href="#">All History</a></li>
         </ul>
     </div>
     <div class="row historyView">
