--- a/SportBoard.Web/Views/Manage/History.cshtml
+++ b/SportBoard.Web/Views/Manage/History.cshtml
@@ -7,20 +7,44 @@
 
 @if (Model.Feeds.Count > 0)
 {
-    <p>You have feeds!</p>
+    <h3>Feeds</h3>
+    <table class="table table-bordered table-hover table-striped">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayName("Feed Name")
+                </th>
+                <th>
+                    @Html.DisplayName("Image")
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                @{ var feeds = Model.Feeds;}
+                @foreach (var feed in feeds)
+                {
+              <tr>
+                    <td>@Html.ActionLink(feed.FeedName, "Details", "Feed", new { id = feed.FeedId }, null)</td>
+                    @*<td><img src="@Url.Content("~/Content/Images" + feed.Image.FileName + ".jpg")"></td>*@
+              </tr>
+                }
+            </tr>
+        </tbody>
+    </table>
 }
 
 @if (Model.Posts.Count > 0)
 {
-    <p>You have Posts!</p>
+    <h2>Posts</h2>
 }
 
 @if (Model.Comments.Count > 0)
 {
-    <p>You have Comments!</p>
+    <h2>Comments</h2>
 }
 
 @if (Model.DeletionRequests.Count > 0)
 {
-    <p>You have DeletionRequests!</p>
+    <h2>Deletion Requests</h2>
 }
