Add eager loading so images can load on User History page.

--- a/SportBoard.Web/Views/Manage/Index.cshtml
+++ b/SportBoard.Web/Views/Manage/Index.cshtml
@@ -106,7 +106,7 @@
         </dd>
     </dl>
 
-
+    @Html.ActionLink("View History", "UserHistory", "Manage", null, new { @class= "btn btn-primary"})
 </div>
 
 @section Scripts{
