--- a/SportBoard.Web/Views/Manage/History.cshtml
+++ b/SportBoard.Web/Views/Manage/History.cshtml
@@ -24,20 +24,48 @@
                 @{ var feeds = Model.Feeds;}
                 @foreach (var feed in feeds)
                 {
-              <tr>
-                    <td>@Html.ActionLink(feed.FeedName, "Details", "Feed", new { id = feed.FeedId }, null)</td>
-                    @*<td><img src="@Url.Content("~/Content/Images" + feed.Image.FileName + ".jpg")"></td>*@
-              </tr>
-                }
-            </tr>
-        </tbody>
-    </table>
-}
+                <tr>
+                    <td>@Html.ActionLink(feed.FeedName, "Details", "Feed", new { id = feed.FeedId }, new { @style = "font-size: 25px;" })</td>
+                    <td style="text-align: center;"><img src="@Url.Content("~/Content/Images/" + feed.Image.FileName + ".jpg")" style="max-height:300px;"></td>
+                </tr>
+            }
+                </tr>
+            </tbody>
+        </table>
+    }
 
 @if (Model.Posts.Count > 0)
 {
     <h2>Posts</h2>
-}
+    <table class="table table-bordered table-hover table-striped">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayName("Feed Name")
+                </th>
+                <th>
+                    @Html.DisplayName("Post Description")
+                </th>
+                <th>
+                    @Html.DisplayName("Post Photo")
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                @{ var posts = Model.Posts;}
+                @foreach (var post in posts)
+                {
+                <tr>
+                    <td>@Html.ActionLink(post.Feed.FeedName, "Details", "Feed", new { id = post.FeedId }, new { @style = "font-size: 25px;" })</td>
+                    <td><p>@post.Description</p></td>
+                    <td style="text-align: center;"><img src="@Url.Content("~/Content/Images/" + post.Image.FileName + ".jpg")" style="max-height:300px;"></td>
+                </tr>
+            }
+                </tr>
+            </tbody>
+        </table>
+    }
 
 @if (Model.Comments.Count > 0)
 {
