Add form and controller action to upload photo. AJAX is not posting to correct action - need to look at

--- a/SportBoard.Web/Views/Manage/Index.cshtml
+++ b/SportBoard.Web/Views/Manage/Index.cshtml
@@ -107,7 +107,7 @@
     </dl>
 
     @Html.ActionLink("View History", "UserHistory", "Manage", null, new { @class = "btn btn-primary" })
-    @Html.ActionLink("Upload Profile Image", "UserHistory", "Manage", null, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Upload Profile Image", "UploadProfilePicture", "Manage", null, new { @class = "btn btn-primary" })
 </div>
 
 @section Scripts{
