--- a/SportBoard.Web/Views/Manage/UploadProfilePicture.cshtml
+++ b/SportBoard.Web/Views/Manage/UploadProfilePicture.cshtml
@@ -6,7 +6,7 @@
 <h2>Upload Profile Picture</h2>
 
 <div class="upload-photo">
-    <form id="form photo-form">
+    <form id="form photo-form" method="post" onsubmit="return AjaxPost(this)" enctype="multipart/form-data">
         <div class="input-group" style="margin-bottom: 5px; width: 100%;">
             <div class="col-md-10">
                 <input type="file" id="imageUploadForm" name="image" accept="image/*" required />
@@ -23,34 +23,51 @@
 @section Scripts{
     <script>
 
-        $(document).ready(function () {
-            $('#form').on("submit", function (e) {
-                e.preventDefault();
-                var formData = new FormData();
-                var totalFiles = document.getElementById("imageUploadForm").files.length;
+        //$(document).ready(function () {
+        //    $('#form').on("submit", function (e) {
+        //        e.preventDefault();
+        //        var formData = new FormData(this);
+        //        var totalFiles = document.getElementById("imageUploadForm").files.length;
 
-                for (var i = 0; i < totalFiles; i++) {
-                    var file = document.getElementById("imageUploadForm").files[i];
-                    formData.append("imageUploadForm", file);
+        //        for (var i = 0; i < totalFiles; i++) {
+        //            var file = document.getElementById("imageUploadForm").files[i];
+        //            formData.append("imageUploadForm", file);
+        //        }
+
+        //        $.ajax({
+        //            type: "POST",
+        //            url: '/Manage/UploadProfilePicture',
+        //            data: formData,
+        //            contentType: false,
+        //            processData: false,
+        //            success: function (response) {
+        //                alert("Posting data");
+        //            },
+        //            error: function () {
+        //                alert("Something unexpected happened! Please try again!");
+        //            }
+        //        })
+        //    })
+        //})
+
+        function AjaxPost(formData) {
+            var ajaxConfig = {
+                type: "POST",
+                url: "/Manage/UploadProfilePicture",
+                data: new FormData(formData),
+                success: function (result) {
+                    alert(result);
                 }
+            }
 
-                $.ajax({
-                    type: "POST",
-                    url: '/Manage/UploadProfilePhoto',
-                    data: formData,
-                    dataType: 'json',
-                    contentType: false,
-                    processData: false,
-                    success: function (response) {
-                        alert("Posting data");
-                    },
-                    error: function () {
-                        alert("Something unexpected happened! Please try again!");
-                    }
-                })
-            })
-        })
+            if ($(formData).attr('enctype') == "multipart/form-data") {
+                ajaxConfig["contentType"] = false;
+                ajaxConfig["processData"] = false;
+            }
 
+            $.ajax(ajaxConfig);
+            return false;
+        }
 
 
 
