Implement user profile picture in nav bar.

--- a/SportBoard.Web/Views/Post/Create.cshtml
+++ b/SportBoard.Web/Views/Post/Create.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-10">
-            <input type="submit" value="Create Feed" class="btn btn-success" id="submit" />
+            <input type="submit" value="Create Post" class="btn btn-success" id="submit" />
         </div>
     </div>
 </form>
