--- a/SportBoard.Web/Content/Site.css
+++ b/SportBoard.Web/Content/Site.css
@@ -60,3 +60,10 @@ h6,
     flex-direction: column;
     align-items: center;
 }
+
+.profilePicture {
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    margin-top: 6px;
+}
