Users can no longer access a feed directly via URL if the feed is no longer active

--- a/SportBoard.Web/Views/Shared/Error.cshtml
+++ b/SportBoard.Web/Views/Shared/Error.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
+<h1 class="text-danger">Error</h1>
 
 @if ((string)@ViewContext.Controller.ValueProvider.GetValue("controller").RawValue == "Post")
 {
@@ -12,7 +12,7 @@
 }
 else if ((string)@ViewContext.Controller.ValueProvider.GetValue("controller").RawValue == "Feed")
 {
-    <h2 class="text-danger">An error occurred while processing your request.The feed either no longer existsor something happened on our end! Please contact support at support@@sportboard.com</h2>
+    <h2 class="text-danger">An error occurred while processing your request.The feed either no longer exists or something happened on our end! Please contact support at support@@sportboard.com</h2>
 
 }
 
