Add property to ManageViewModel to dynamically update profile picture upload depending on if a photo already exists for user.

--- a/SportBoard.Web/Views/Manage/Index.cshtml
+++ b/SportBoard.Web/Views/Manage/Index.cshtml
@@ -107,7 +107,12 @@
     </dl>
 
     @Html.ActionLink("View History", "UserHistory", "Manage", null, new { @class = "btn btn-primary" })
-    @Html.ActionLink("Upload Profile Image", "UploadProfilePicture", "Manage", null, new { @class = "btn btn-primary" })
+    @{
+        var profilePictureText = Model.HasProfilePicture == true ? "Update" : "Upload";
+
+        @Html.ActionLink(@profilePictureText + " Profile Image", "UploadProfilePicture", "Manage", null, new { @class = "btn btn-primary" })
+    }
+
 </div>
 
 @section Scripts{
